syntax = "proto3";

package pipelines;

option go_package = "./proto/pipelines";

service PipelineStatus {
    rpc GetStatus(GetStatusRequest) returns (stream GetStatusResponse);
}

message GetStatusRequest {
    string group = 1;
}

message GetStatusResponse {
    string branch = 1;
    string status = 2;
    string commit = 3;
    string author = 4;
    string message = 5;
    string date = 6;
    string url = 7;
}